# sdf2sdf

./: CMakeLists.txt  PhiFuncGradients.cpp  PhiFuncGradients.h  PhisFunc.cpp  PhisFunc.h  README.md  common.h  main.cpp  myPoint.h  selfCross.cpp  selfCross.h
